tests/language_tests/fail/0096_len_double.ee
fn main() {
    println(len(1.5));
}
